# Solver

./: pyproject.toml
src/model/: solution.py  task.py
src/services/storage/: storage_protocol.py
src/services/storage/file_system_storage/: __init__.py  file_system_storage.py
